--- a/app/views/locations/placements-policy.html
+++ b/app/views/locations/placements-policy.html
@@ -18,23 +18,11 @@
         items: [{
           value: "hosted",
           text: "Yes",
-          checked: checked(("placements-policy"), "hosted"),
-          label: {
-            classes: "govuk-label--s"
-          },
-          hint: {
-            text: "You can manage vacancies for each course from the ‘Courses’ page"
-          }
+          checked: checked(("placements-policy"), "hosted")
         }, {
           value: "placed",
           text: "No",
-          checked: checked(("placements-policy"), "placed"),
-          label: {
-            classes: "govuk-label--s"
-          },
-          hint: {
-            text: "Placements are arranged with candidates before their training starts"
-          }
+          checked: checked(("placements-policy"), "placed")
         }]
       }) }}
 
