Fix location wizard flow

--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -69,7 +69,7 @@
   </h1>
 
   <div class="govuk-!-width-two-thirds">
-    <p class="govuk-body">Most candidates search for courses by location. Adding locations improves the visibility of your courses on Find.</p>
+    <p class="govuk-body-l">Most candidates search for courses by location. Adding locations improves the visibility of your courses on Find.</p>
   </div>
 
   {% set placementSchoolsHtml %}
