--- a/app/views/locations/add.html
+++ b/app/views/locations/add.html
@@ -18,7 +18,7 @@
         items: [{
           value: "upload",
           text: "Upload a list of Unique reference numbers (URNs)",
-          checked: checked(("placements-display"), "list"),
+          checked: checked(("add-placements-answer"), "upload"),
           label: {
             classes: "govuk-label--s"
           },
@@ -28,7 +28,7 @@
         }, {
           value: "add",
           text: "Add each school individually",
-          checked: checked(("placements-display"), "area"),
+          checked: checked(("add-placements-answer"), "add"),
           label: {
             classes: "govuk-label--s"
           },
