Show only school placements locations on preview page

--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -135,7 +135,7 @@
               </tr>
             </thead>
             <tbody class="govuk-table__body">
-              {% for location in course.schools %}
+              {% for location in schoolLocations %}
               <tr class="govuk-table__row">
                 <td class="govuk-table__cell">
                   <span class="govuk-!-font-weight-bold">{{ location.name }}</span>
