Fix location wizard flow

--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -76,7 +76,7 @@
     <h2 class="govuk-heading-l">Placement schools</h2>
     <p class="govuk-body">A placement school is a location where candidates may be placed during their training.</p>
 
-    {% if data["placements-policy"] and schoolLocations.length > 0 %}
+    {% if data["placements-display"] and schoolLocations.length > 0 %}
       <div class="govuk-!-width-two-thirds">
         <div class="govuk-inset-text">
           <h3 class="govuk-heading-m">
