Update upload page

--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -105,7 +105,7 @@
           text: "Add a new placement school",
           href: "/location/start?type=school"
         }) }}
-        <a class="govuk-link govuk-link--no-visited-state" href="/locations/upload">Upload schools CSV</a>
+        <a class="govuk-link govuk-link--no-visited-state" href="/locations/upload">Upload school data</a>
       </div>
     {% else %}
       <div class="govuk-!-width-two-thirds">
