--- a/app/views/locations/placements-display.html
+++ b/app/views/locations/placements-display.html
@@ -3,7 +3,7 @@
 {% set backLink = referrer or paths.back %}
 
 {% block content %}
-  <form action="{{ referrer or paths.next }}" method="post" class="govuk-grid-row">
+  <form action="{{ paths.next }}" method="post" class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       {{ govukRadios({
         idPrefix: "placements-display",
