--- a/app/views/locations/add.html
+++ b/app/views/locations/add.html
@@ -18,23 +18,11 @@
         items: [{
           value: "upload",
           text: "Upload a list of Unique reference numbers (URNs)",
-          checked: checked(("add-placements-answer"), "upload"),
-          label: {
-            classes: "govuk-label--s"
-          },
-          hint: {
-            text: "Lorem ipsum CSV lorem ipsum URNs"
-          }
+          checked: checked(("add-placements-answer"), "upload")
         }, {
           value: "add",
           text: "Add each school individually",
-          checked: checked(("add-placements-answer"), "add"),
-          label: {
-            classes: "govuk-label--s"
-          },
-          hint: {
-            text: "Lorem ipsum"
-          }
+          checked: checked(("add-placements-answer"), "add")
         }]
       }) }}
 
