remove a bit of repetition

--- a/app/views/cycles.html
+++ b/app/views/cycles.html
@@ -22,8 +22,8 @@
 
         <p>Use this section to:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>manage courses in the current cycle</li>
-          <li>edit locations and vacancies in the current cycle</li>
+          <li>manage your existing courses</li>
+          <li>edit locations and vacancies</li>
         </ul>
       </div>
       <div class="govuk-!-margin-bottom-8">
@@ -33,7 +33,7 @@
         <p>Use this section to:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>prepare courses for the next cycle</li>
-          <li>manage locations needed for the next cycle</li>
+          <li>manage locations</li>
         </ul>
       </div>
     </div>
