--- a/app/views/organisation/index.html
+++ b/app/views/organisation/index.html
@@ -32,7 +32,7 @@
     <div class="govuk-grid-column-two-thirds">
       {% if data["rolled-over"] %}
         {% if data["next-cycle"] %}
-          <p class="govuk-body-l">Prepare your courses and locations for the next cycle. All your courses, locations and details have been copied from the current cycle.</p>
+          <p class="govuk-body-l">Prepare your courses and locations for the next cycle. Your records have been copied from the current cycle.</p>
           <hr class="govuk-section-break govuk-section-break--m">
         {% else %}
           <p class="govuk-body-l">Manage courses, locations and vacancies in the current&nbsp;cycle.</p>
