--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -9,22 +9,23 @@
   {% endif %}
 {% endset %}
 
-{% set placementLocations = data[code + "-locations"] %}
-{% set canEditPlacementLocations = data["placements-policy"] and placementLocations.length > 0 %}
-{% set placementLocationsHtml %}
+{% set canEditSchoolLocations = data["placements-policy"] and schoolLocations.length > 0 %}
+{% set schoolLocationsHtml %}
   {# List of school placement locations #}
-  {% if data["placements-policy"] and isArray(placementLocations) and placementLocations.length > 0 %}
+  {% if data["placements-display"] == "list" and isArray(schoolLocations) and schoolLocations.length > 0 %}
     <ul class="govuk-list">
-      {% for location in placementLocations %}
+      {% for location in schoolLocations %}
         {% set location = data.schools | find("name", location) %}
         <li>{{ location.name }}, {{ location['address-level1'] }}</li>
       {% endfor %}
     </ul>
+  {% elif data["placements-display"] == "area" %}
+    <p class="govuk-body">Bradford, Leeds and Wakefield.</p>
   {% else %}
     <div class="govuk-inset-text app-inset-text app-inset-text--{{ "error" if showErrors else "important" }}">
       <p class="govuk-heading-s app-inset-text__title">Where will candidates be placed?</p>
-      {% if not data["placements-policy"] %}
-        {# Placement policy must be set before this question can be answered #}
+      {% if not data["placements-display"] %}
+        {# Placement display setting must be set before this question can be answered #}
         <p><a class="govuk-link govuk-link--no-visited-state" href="/locations/placements-display?referrer=/course/{{ value("provider-code") }}/{{ code }}/"/>Set up placement schools</a></p>
       {% else %}
         <p><a class="govuk-link govuk-link--no-visited-state" href="/edit/{{ code }}/placement-locations">Select the locations candidates can apply to</a></p>
@@ -228,12 +229,12 @@
   } if data["new-course"]["include-accredited"],
 
   {
-    classes: placementLocationSummaryRowClasses,
+    classes: schoolLocationSummaryRowClasses,
     key: {
       text: "Placement schools"
     },
     value: {
-      html: placementLocationsHtml
+      html: schoolLocationsHtml
     },
     actions: {
       items: [{
@@ -241,7 +242,7 @@
         text: "Change",
         visuallyHiddenText: "placement schools"
       }]
-    } if showChangeLinks and canEditPlacementLocations
+    } if showChangeLinks and canEditSchoolLocations
   },
 
   {
