--- a/app/views/location/index.html
+++ b/app/views/location/index.html
@@ -16,7 +16,7 @@
         value: school.name,
         label: {
           classes: "govuk-label--m",
-          text: "Name"
+          text: "Location name"
         }
       }) }}
 
@@ -26,10 +26,10 @@
         value: school.urn,
         label: {
           classes: "govuk-label--m",
-          text: "Unique Reference Number (URN)"
+          text: "Unique reference number (URN)"
         },
         hint: {
-          html: "You can find URNs on <a href=\"https://www.get-information-schools.service.gov.uk/\" target=\"_blank\">Get information about schools (opens in new tab)</a>."
+          html: "<a href=\"https://www.get-information-schools.service.gov.uk/\" target=\"_blank\">Find URNs (opens in new tab)</a>."
         },
         classes: "govuk-input--width-5"
       }) }}
