--- a/app/views/locations/add.html
+++ b/app/views/locations/add.html
@@ -17,7 +17,7 @@
         },
         items: [{
           value: "upload",
-          text: "Upload a list of Unique reference numbers (URNs)",
+          text: "Upload a list of unique reference numbers (URNs)",
           checked: checked(("add-placements-answer"), "upload")
         }, {
           value: "add",
