--- a/app/views/locations/placements-display.html
+++ b/app/views/locations/placements-display.html
@@ -17,17 +17,17 @@
         },
         items: [{
           value: "list",
-          text: "Show a list of placement schools for each course",
+          text: "Show precise placement locations for each course",
           checked: checked(("placements-display"), "list"),
           hint: {
-            text: "You can assign placement schools from the ‘Basic details’ tab on the course page."
+            text: "You can assign your placement schools to your courses later from your individual course pages."
           }
         }, {
           value: "area",
-          text: "Show the areas where placements can be offered",
+          text: "Show only the general placement areas",
           checked: checked(("placements-display"), "area"),
           hint: {
-            text: "These areas will be generated from the placement schools locations added."
+            text: "You still need to add precise locations to generate these areas."
           }
         }]
       }) }}
