--- a/app/views/locations/placements-policy.html
+++ b/app/views/locations/placements-policy.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = "Can candidates choose a school when they apply?" %}
+{% set title = "Can candidates choose a placement school when they apply?" %}
 {% set backLink = paths.back %}
 
 {% block content %}
