Fix status box on org page

--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -82,7 +82,7 @@
 {% endmacro %}
 
 {% macro aboutYourOrgPublish(state = 'new', publishedBefore = false, publishLink = '#') %}
-<div class="govuk-!-margin-bottom-6 status-box">
+<div class="app-status-box">
   {% if state == 'draft' %}
     <div class="unpublished-changes">
       <span class="govuk-tag phase-tag-draft govuk-!-margin-bottom-4">Draft</span>
