shorten hint text, remove repeated words

--- a/app/views/locations/placements-display.html
+++ b/app/views/locations/placements-display.html
@@ -20,14 +20,14 @@
           text: "Show precise placement locations for each course",
           checked: checked(("placements-display"), "list"),
           hint: {
-            text: "You can assign your placement schools to your courses later from your individual course pages."
+            text: "You can assign placement schools to courses later from your individual course pages."
           }
         }, {
           value: "area",
           text: "Show only the general placement areas",
           checked: checked(("placements-display"), "area"),
           hint: {
-            text: "You still need to add precise locations to generate these areas."
+            text: "You still need to add precise locations to do this."
           }
         }]
       }) }}
