shorten copy in line with previous changes

--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -87,7 +87,7 @@
             {% endif %}
           </h3>
           {% if data["placements-display"] == "list" %}
-            <p class="govuk-body">You can assign your placement schools to your courses from your individual course pages.</p>
+            <p class="govuk-body">You can assign placement schools to courses from your individual course pages.</p>
           {% else %}
             <p class="govuk-body">Based on the school locations you have added, courses will show the following areas:</p>
             <div class="app-status-box">
