--- a/app/views/new/placement-locations.html
+++ b/app/views/new/placement-locations.html
@@ -37,7 +37,7 @@
         <h1 class="govuk-heading-xl">{{ title }}</h1>
         <div class="govuk-inset-text">
           <h2 class="govuk-heading-m">You have not added any placement schools</h2>
-          <p class="govuk-body">Placement schools are locations where candidates may be placed during their training.</p>
+          <p class="govuk-body">Add the schools where candidates may be placed during their training.</p>
 
           {{ govukButton({
             text: "Add a placement school",
