--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -28,7 +28,7 @@
         {# Placement display setting must be set before this question can be answered #}
         <p><a class="govuk-link govuk-link--no-visited-state" href="/locations/placements-display?referrer=/course/{{ value("provider-code") }}/{{ code }}/"/>Set up placement schools</a></p>
       {% else %}
-        <p><a class="govuk-link govuk-link--no-visited-state" href="/edit/{{ code }}/placement-locations">Select the locations candidates can apply to</a></p>
+        <p><a class="govuk-link govuk-link--no-visited-state" href="/edit/{{ code }}/placement-locations">Select the locations candidates may be placed</a></p>
       {% endif %}
     </div>
   {% endif %}
