do some of the location selling up front

--- a/app/views/organisation/index.html
+++ b/app/views/organisation/index.html
@@ -53,12 +53,12 @@
       <h2 class="govuk-heading-m">
         <a href="/locations">Locations</a>
       </h2>
+      <p>Use this section to add or edit your training locations. This will make your courses more visible on Find.</p>
 
-      <p>Use this section to:</p>
+      <p>You can also choose whether to:</p>
       <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
-        <li>choose how to display school placement locations</li>
-        <li>edit location names and addresses</li>
-        <li>add locations</li>
+        <li>show precise placement locations or only the general area</li>
+        <li>allow candidates to choose a placement school</li>
       </ul>
 
       <h2 class="govuk-heading-m">
