--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -81,9 +81,9 @@
         <div class="govuk-inset-text">
           <h3 class="govuk-heading-m">
             {% if data["placements-display"] == "list" %}
-              You've chosen to show precise placement locations{{ " and allow candidates to choose one when they apply" if data["placements-policy"] == "hosted" }}
+              You’ve chosen to show precise placement locations{{ " and allow candidates to choose one when they apply" if data["placements-policy"] == "hosted" }}
             {% else %}
-              You've chosen to show only the general areas where placements can be offered
+              You’ve chosen to show only the general areas where placements can be offered
             {% endif %}
           </h3>
           {% if data["placements-display"] == "list" %}
