--- a/app/views/rolled-over.html
+++ b/app/views/rolled-over.html
@@ -11,7 +11,7 @@
         Prepare for the next cycle
       </h1>
 
-      <p>The next application cycle begins on 1 September 2021.</p>
+      <p>Courses for the next cycle (2022 to 2023) will be published on 1 September 2021.</p>
 
       <p>Your courses, locations and organisation details have been copied from the current cycle.</p>
 
