--- a/app/views/location/index.html
+++ b/app/views/location/index.html
@@ -30,7 +30,7 @@
           text: "Unique reference number (URN)"
         },
         hint: {
-          html: "<a href=\"https://www.get-information-schools.service.gov.uk/\" target=\"_blank\">Find URNs (opens in new tab)</a>."
+          html: "<a class=\"govuk-link\" href=\"https://www.get-information-schools.service.gov.uk/\" target=\"_blank\">Find URNs (opens in new tab)</a>."
         },
         classes: "govuk-input--width-5"
       }) }}
