--- a/app/views/new/placement-locations.html
+++ b/app/views/new/placement-locations.html
@@ -18,7 +18,7 @@
           },
           hint: {
             classes: "govuk-!-margin-bottom-6",
-            html: "<a href=\"/locations\">Manage all your locations</a> to add to or edit this list."
+            html: "<a class=\"govuk-link\" href=\"/locations\">Manage all your locations</a> to add to or edit this list."
           },
           items: items
         }) }}
