--- a/app/views/new/training-locations.html
+++ b/app/views/new/training-locations.html
@@ -33,7 +33,7 @@
           }) }}
         </div>
       {% else %}
-        <p class="govuk-body"><a href="/locations">Manage your training locations</a> to update this list.</p>
+        <p class="govuk-body"><a class="govuk-link" href="/locations">Manage your training locations</a> to update this list.</p>
       {% endif %}
 
       {{ govukCheckboxes({
