--- a/app/views/course/gcses-pending-or-equivalency-tests.html
+++ b/app/views/course/gcses-pending-or-equivalency-tests.html
@@ -85,7 +85,7 @@
         },
         value: data[course.programmeCode + "-equivalency-test-details"],
         hint: {
-          text: "For example, whether you run the tests directly or use a third party, and if there are any costs that candidates need to pay."
+          text: "For example, if you offer the tests or ask candidates to use a third party, and if there are any costs to pay."
         }
       }) }}
     {% endset %}
