Show free text on preview

--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -245,6 +245,10 @@
               {% endif %}
             </p>
 
+            {% if equivalencyTestsOffered == "true" and data[code + "-equivalency-test-details"] %}
+              <p class="govuk-body">{{ data[code + "-equivalency-test-details"] }}</p>
+            {% endif %}
+
         {% else %}
           {# Show missing message #}
             <div class="govuk-inset-text app-inset-text app-inset-text--important">
