Re-worded Request PE courses copy
Re-worded the Request PE courses copy for the 'allocations open' condition.

--- a/app/views/organisation/index.html
+++ b/app/views/organisation/index.html
@@ -93,12 +93,12 @@
           <a href="/allocations">Request PE courses for 2022 to 2023</a>
         </h2>
 
-        <p>Use it to view the outcome of requests for fee-funded PE courses (ones without a salary) for the next recruitment cycle.</p>
-        <p>This includes:</p>
-        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
-          <li>your own courses</li>
-          <li>courses you’re the accredited body for (you must request these on behalf of training partners)</li>
+        <p>Use this section to:</p>
+        <ul class="govuk-list govuk-list--bullet ">
+          <li>request fee-funded PE courses (ones without a salary)</li>
+          <li>check the status of these requests</li>
         </ul>
+        <p>If you accredit fee-funded PE courses for any training providers, you must request these courses on their behalf.</p>
       {% endif %}
 
       {% if data["allocations-window"] == 'closed' %}
