Change to text in Skilled Worker visa answer
Changed the "no" answer to "no or not applicable" for providers who don't have salaried courses.

--- a/app/views/about-your-organisation/visa-sponsorship.html
+++ b/app/views/about-your-organisation/visa-sponsorship.html
@@ -52,7 +52,7 @@
           checked: (data[skilledWorkerVisaRadioName] === "true")
         }, {
           value: "false",
-          text: "No",
+          text: "No, or not applicable",
           checked: (data[skilledWorkerVisaRadioName] === "false")
         }]
       }) }}
