--- a/app/views/about-your-organisation/visa-sponsorship.html
+++ b/app/views/about-your-organisation/visa-sponsorship.html
@@ -10,9 +10,9 @@
         {{ title }}
       </h1>
 
-      <p class="govuk-bodu">Check the <a href="https://www.gov.uk/government/publications/register-of-licensed-sponsors-students" class="govuk-link">Register of Student sponsors</a> and <a href="https://www.gov.uk/government/publications/register-of-licensed-sponsors-workers" class="govuk-link">Register of Worker and Temporary Worker licensed sponsors</a> if you’re unsure if your courses can sponsor visas.</p>
+      <p class="govuk-bodu">If you’re unsure if your courses can sponsor visas, check the <a href="https://www.gov.uk/government/publications/register-of-licensed-sponsors-students" class="govuk-link">Register of Student sponsors</a> and <a href="https://www.gov.uk/government/publications/register-of-licensed-sponsors-workers" class="govuk-link">Register of Worker and Temporary Worker licensed sponsors</a>.</p>
 
-      <p>For more information sponsoring Student or Skilled Worker visas, see the guidance on <a href="https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers#recruit-by-becoming-a-visa-sponsor" class="govuk-link">Recruiting  trainee teachers from overseas: accredited ITT providers</a>.</p>
+      <p class="govuk-body">Find out how to <a href="https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers#recruit-by-becoming-a-visa-sponsor" class="govuk-link">become a visa sponsor</a>.</p>
 
       {% set studentVisaRadioName = "canSponsorStudentVisa" %}
       {% set skilledWorkerVisaRadioName = "canSponsorSkilledWorkerVisa" %}
